...
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="IJx-NR-kS0" secondAttribute="height" multiplier="1:1" id="JAr-6d-OE1"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRV-Il-GXI">
                                                    <rect key="frame" x="79.5" y="8" width="254.5" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="UsernameLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="url" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqK-US-oyY">
                                                    <rect key="frame" x="79.5" y="54" width="254.5" height="17"/>
...
                                                <constraint firstAttribute="trailing" secondItem="eG1-xg-TR8" secondAttribute="trailing" constant="8" id="xDE-ko-byj"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="forksLabel" destination="eG1-xg-TR8" id="SXs-t0-lwW"/>
                                            <outlet property="languageLabel" destination="xM4-z4-GZq" id="4xh-S9-XxX"/>
                                            <outlet property="nameLabel" destination="rGe-MF-DlN" id="gup-zI-aXZ"/>
                                            <outlet property="watchersLabel" destination="Z64-ZK-gbX" id="Z2G-kc-mPR"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No results to show" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZq-FM-NBt">
...
