...
        tableView.rowHeight = 80
        tableView.delegate = self
        tableView.dataSource = self
    }

    func setSearchBar() {
        searchBar.placeholder = "Search users"
        searchBar.delegate = self
    }

    func reloadData() {
        tableView.reloadData()
    }
...
